# sentri

./: .coverage  CLAUDE.md  CONTRIBUTING.md  DQ_Framework_Requirements_v2.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  security.yml
examples/configs/: sample_config.yaml
examples/data/: sample_data.csv
examples/scripts/: basic_usage.py
src/data_quality/: __init__.py  cli.py  version.py
src/data_quality/alerting/: __init__.py  base.py  email_plugin.py
src/data_quality/checks/: __init__.py  base.py  completeness.py  correlation.py  distribution.py  drift.py  frequency.py  range_check.py  statistical.py  turnover.py  uniqueness.py  value_spike.py
src/data_quality/connectors/: __init__.py  base.py  csv_connector.py  registry.py
src/data_quality/core/: __init__.py  config_loader.py  config_schema.py  exceptions.py  framework.py
src/data_quality/formatters/: __init__.py  csv_formatter.py  html_formatter.py  json_formatter.py  output_manager.py
src/data_quality/managers/: __init__.py  check_manager.py
src/data_quality/utils/: __init__.py  constants.py  logger.py
src/sentri/: __init__.py
src/sentri.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sentri/checks/: __init__.py
src/sentri/connectors/: __init__.py
tests/: __init__.py
tests/fixtures/: test_fixtures.py
tests/integration/: __init__.py  test_end_to_end.py  test_robust_scenarios.py
tests/unit/: __init__.py  test_alerting.py  test_check_manager.py  test_checks_base.py  test_cli.py  test_config_loader.py  test_config_schema.py  test_connectors.py  test_constants.py  test_core_checks.py  test_correlation_check.py  test_distribution_check.py  test_drift_check.py  test_edge_cases.py  test_exceptions.py  test_framework.py  test_logger.py  test_statistical_check.py
