[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentri"
version = "1.0.0"
description = "Sentri - a production-ready, configurable data quality validation framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Milind Kulshrestha", email = "milind.kulshrestha@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
oracle = ["oracledb>=1.0.0"]
snowflake = ["snowflake-connector-python>=3.0.0"]
all = [
    "oracledb>=1.0.0",
    "snowflake-connector-python>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "bandit[toml]>=1.7.0",
    "safety>=2.0.0",
    "twine>=4.0.0",
]

[project.scripts]
dq-check = "data_quality.cli:main"

[project.urls]
Homepage = "https://github.com/milind-kulshrestha/sentri"
Documentation = "https://github.com/milind-kulshrestha/sentri#readme"
Repository = "https://github.com/milind-kulshrestha/sentri"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src/data_quality --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["override", "attr-defined", "var-annotated", "union-attr", "arg-type", "import-untyped"]
